# gen3

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: GEN3-7DOF-VISION_ARM_URDF_V12.ros2_control.xacro  GEN3-7DOF-VISION_ARM_URDF_V12.srdf  GEN3-7DOF-VISION_ARM_URDF_V12.urdf.xacro  gen3_7dof_panda_gripper.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  motion_planning_python_api_tutorial.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_planning.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
scripts/: ai_motion_planning.py  motion_planning_python_api_tutorial.py
